# SimpleQM

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  LICENSE  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  simpleqm.sln  simpleqm.vcxproj  simpleqm.vcxproj.filters
src/: main.cpp  quine-mccluskey.cpp  quine-mccluskey.hpp
